--- a/composer.json
+++ b/composer.json
@@ -10,8 +10,8 @@
         "laravel/framework": "^10.0",
         "laravel/sanctum": "^3.2",
         "laravel/tinker": "^2.8",
-        "tymon/jwt-auth": "2.1.1",
-        "yajra/laravel-datatables": "10.0"
+        "tymon/jwt-auth": "^2.2",
+        "yajra/laravel-datatables": "^10.1"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
